Push latest changes

--- a/index.html
+++ b/index.html
@@ -74,6 +74,44 @@
 
        <button id="removeLastTask"> Remove Last Task</button>
     </section>
+
+    <section>
+        <h2>Event Handling DOM</h2>
+        <button id="clickButton"> Click me</button>
+    </section>
+
+    <section>
+        <h2>Event Delegation</h2>
+        <ul id="teaList">
+            <li class="teaItem">Green Tea</li>
+            <li class="teaItem">Black Tea</li>
+            <li class="teaItem">Oolong Tea</li>
+        </ul>
+        <p>Click on any tea to select it!</p>
+    </section>
+
+
+    <section>
+        <h2>Form Handling</h2>
+        <form id="FeedbackForm">
+            <label for="FeedbackInput">Your Feedback</label>
+             <input type="text" id="FeedbackInput" placeholder="Enter your Feedback"/>
+             <button type="submit">Submit Feedback</button>
+        </form>
+        <p id="FeedbackDisplay"></p>
+    </section>
+
+
+    <section>
+        <h2>DOM Content Loaded</h2>
+        <p id="domStatus">Waiting for DOM to LOAD.....</p>
+    </section>
+
+    <section>
+        <h2> CSS Classes manipulation</h2>
+        <p id="descriptionText">This text will change color!</p>
+        <button id="toogleHighlight">Toggle HighLight</button>
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
